--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -5,9 +5,11 @@
   border-bottom-color: #FF3D00;
   border-radius: 50%;
   display: inline-block;
-  margin: auto;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   }
 
   @keyframes rotation {
